--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body, html {
   z-index: 1;
   padding: 20px;
   margin-top: 5%;
-  background: rgba(0, 0, 0, 0.5);
+  background: transparent;
   border-radius: 15px;
   display: inline-block;
   box-shadow: 0 4px 20px rgba(0,0,0,0.6);
