--- a/style.css
+++ b/style.css
@@ -17,13 +17,10 @@ body, html {
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  pointer-events: none;
-  overflow: hidden;
-}
-#video-background video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #222;
 }
 
 /* Content blok */
