--- a/style.css
+++ b/style.css
@@ -24,18 +24,17 @@ body, html {
   box-shadow: 0 3px 10px rgba(0,0,0,0.7);
 }
 
-/* Video achtergrond */
 #video-background {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  background-size: cover;
-  background-position: center;
+  width: 100%;
+  height: 100%;
+  background-position: center center;
   background-repeat: no-repeat;
-  background-color: #222;
+  background-size: contain; /* Zorgt dat foto volledig zichtbaar blijft */
+  background-color: black; /* Achtergrondvulling bij andere beeldverhoudingen */
+  z-index: -1;
 }
 
 /* Weer-widget rechtsboven */
